feat: collect several artists at once, and show devices per build
The push tab listed users but not how many devices sit on each build, so
picking MIN_BUILD meant counting rows by hand. /push/users now also
returns the per-build device count, and the table says how many devices
each threshold would reach — including the unknown-build group that any
threshold drops.

The artist box takes comma-separated names and collects them in order,
the way the script's collect-artist did. Names that don't resolve to
exactly one artist are skipped and marked, since those still need a
person to pick from the candidates.

The REPLACE flag has no equivalent because it needs none: the page loads
the whole set and applies what's left, which covers both appending and
replacing.